<resources>
    <string name="app_name">Movie Catalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_movie_text">Movie</string>
    <string name="tab_tv_show_text">Tv Show</string>
    <string name="tv_show">TvShow</string>
    <string name="movie">Movie</string>
    <string name="title">Judul</string>
    <string name="poster">Poster</string>
    <string name="overview">Overview</string>
    <string name="director">Director</string>
    <string name="release_date">Tanggal Rilis</string>
    <string name="runtime">Durasi</string>
    <string name="genre">Genre</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="upcoming_movie">Upcoming Movie</string>
    <string name="on_air">On Air</string>
    <string name="airing_today">Airing Today</string>
    <string name="popular_tv_show">Popular Tv Show</string>
    <string name="review">Review</string>
    <string name="no_review">Belum ada review</string>
    <string name="author">author</string>

</resources>
