<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_toolbar">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_poster_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintCircleRadius="@dimen/padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="8dp">
                <ImageView
                    android:id="@+id/img_poster_detail"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/poster"
                    android:scaleType="fitXY"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txt_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/genre"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_poster_detail"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txt_genre_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_poster_detail"
                app:layout_constraintTop_toBottomOf="@id/txt_genre"/>

            <TextView
                android:id="@+id/txt_runtime_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="16dp"
                android:text="@string/runtime"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_poster_detail"
                app:layout_constraintTop_toBottomOf="@+id/txt_genre_detail" />

            <TextView
                android:id="@+id/txt_content_runtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="16dp"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_poster_detail"
                app:layout_constraintTop_toBottomOf="@+id/txt_runtime_detail"/>

            <TextView
                android:id="@+id/txt_overview_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="8dp"
                android:text="@string/overview"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_poster_detail" />

            <TextView
                android:id="@+id/txt_content_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="16dp"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_overview_detail"/>

            <TextView
                android:id="@+id/txt_director_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="8dp"
                android:text="@string/director"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_content_overview" />

            <TextView
                android:id="@+id/txt_content_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="16dp"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_director_detail"/>

            <TextView
                android:id="@+id/txt_release_date_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="8dp"
                android:text="@string/release_date"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_content_director" />

            <TextView
                android:id="@+id/txt_content_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_release_date_detail"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>